--- a/movie-dash.ipynb
+++ b/movie-dash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 924,
+   "execution_count": 1122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,14 @@
     "import numpy as np \n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
-    "import seaborn as sns\n",
     "from math import floor\n",
-    "from dash import Dash, dcc, html, Input, Output, State"
+    "from dash import Dash, dcc, html, Input, Output\n",
+    "from dash_iconify import DashIconify"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 925,
+   "execution_count": 1123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 926,
+   "execution_count": 1124,
    "metadata": {},
    "outputs": [
     {
@@ -118,19 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 927,
+   "execution_count": 1125,
    "metadata": {},
    "outputs": [],
    "source": [
     "#sorting years to get the min and max years\n",
     "years = sorted(int(year) for year in df['Released_Year'].unique())\n",
     "# Extract genre names from the column headers\n",
-    "genre_columns = df.columns[df.columns.get_loc('Gross')+1:]"
+    "genre_columns = df.columns[df.columns.get_loc('Gross')+1:]\n",
+    "# Define a common color palette\n",
+    "common_palette = px.colors.sequential.RdBu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 928,
+   "execution_count": 1126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,6 +185,7 @@
     "                      x='Year_Bin',\n",
     "                      y='Popularity',\n",
     "                      color='Genre',\n",
+    "                      color_discrete_sequence=common_palette,\n",
     "                      line_group='Genre',\n",
     "                      title='Genre Popularity Over Three-Year Bins',\n",
     "                      labels={'Popularity': 'Number of Movies', 'Year_Bin': 'Year Bin'})\n",
@@ -241,6 +244,8 @@
     "    else:\n",
     "        combined_df = grouped_df\n",
     "\n",
+    "    color_map = {'Average': '#cb818f', selected_movie: '#92c5de'} if selected_movie else {'Average': '#cb818f'}\n",
+    "\n",
     "    # Create the bubble chart\n",
     "    fig = px.scatter(\n",
     "        combined_df,\n",
@@ -250,6 +255,7 @@
     "        color='label',  # Use 'label' for coloring to tie it to movie titles or 'Average'\n",
     "        hover_name='label',  # Hover shows the label which is either 'Average' or the movie title\n",
     "        title='Average Gross Revenue vs. IMDB Rating',\n",
+    "        color_discrete_map=color_map,\n",
     "        labels={\n",
     "            'IMDB_Rating': 'IMDB Rating',\n",
     "            'Gross': 'Average Gross Revenue ($)',\n",
@@ -279,7 +285,7 @@
     "            'Rating': [f\"{filtered_df['IMDB_Rating'].iloc[0]} Rating\"],\n",
     "            'Count': [1]\n",
     "        })\n",
-    "        fig = px.pie(single_movie_df, values='Count', names='Rating', title=f\"IMDB Rating: {filtered_df['IMDB_Rating'].iloc[0]}\")\n",
+    "        fig = px.pie(single_movie_df, values='Count', names='Rating', title=f\"IMDB Rating: {filtered_df['IMDB_Rating'].iloc[0]}\", color_discrete_sequence=common_palette,)\n",
     "    else:\n",
     "        # Normal genre and year filtering\n",
     "        filtered_df = df[df['Released_Year'].between(selected_years[0], selected_years[1])]\n",
@@ -297,7 +303,7 @@
     "            names='Rating_Bin',\n",
     "            title='Distribution of IMDB Ratings',\n",
     "            color='Rating_Bin',\n",
-    "            color_discrete_sequence=px.colors.sequential.RdBu,  # Color palette\n",
+    "            color_discrete_sequence=common_palette,\n",
     "        )\n",
     "\n",
     "    return fig\n",
@@ -319,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 929,
+   "execution_count": 1127,
    "metadata": {},
    "outputs": [
     {
@@ -344,85 +350,134 @@
     "#App layout to define the structure of the web page\n",
     "app.layout = html.Div([\n",
     "    #Title describing the purpose of the web app\n",
-    "    html.H1('Movie Data Visualization Dashboard', style={'textAlign': 'center', 'width': '100%'}), \n",
+    "    html.H1('Movie Data Visualization Dashboard', className='custom-font', style={'border-radius': '10px', 'padding': '10px', 'background-color' : 'white', 'box-shadow': '0 4px 8px 0 rgba(0, 0, 0, 0.2)'}), \n",
     "    #Contaier div to store all the components\n",
     "    html.Div(children=[\n",
     "        html.Div(children=[\n",
-    "            html.Div(\n",
-    "                # Control dropdown to select which dropdown to activate\n",
-    "                dcc.RadioItems(\n",
-    "                id='control-radio',\n",
-    "                options=[\n",
-    "                    {'label': 'Select Movie', 'value': 'movie'},\n",
-    "                    {'label': 'Select Genre', 'value': 'genre'}\n",
-    "                ],\n",
-    "                value='movie',\n",
-    "                style={'width': '100%', 'padding': '10px'}\n",
-    "                ), style={'margin-bottom': '20px'}\n",
-    "            ),\n",
-    "            html.Div(\n",
-    "                # Movie dropdown component\n",
-    "                dcc.Dropdown(\n",
-    "                    # Identifier for the movie dropdown component\n",
-    "                    id='movie-dropdown',  \n",
-    "                    #Using the dataframe to populate the options by creating key value pairs with unique movie titles\n",
-    "                    options=[{'label': title, 'value': title} for title in df['Series_Title'].unique()],  \n",
-    "                    #Custom placeholder text to describe what actions to take as a user\n",
-    "                    placeholder = 'Select One Movie Title',\n",
-    "                # Styling to fit half the width\n",
-    "                ), style={'margin-bottom': '20px'}\n",
-    "            ),\n",
-    "            html.Div(\n",
-    "                # Genre dropdown component\n",
-    "                dcc.Dropdown(\n",
-    "                    # Identifier for the genre dropdown component\n",
-    "                    id='genre-dropdown',  \n",
-    "                    #Using the dataframe to populate the options by creating key value pairs with unique genres\n",
-    "                    options=[{'label': genre, 'value': genre} for genre in genre_columns.unique()],  \n",
-    "                    #Custom placeholder text to describe what actions to take as a user\n",
-    "                    placeholder = 'Select One or More Genre',\n",
-    "                    # Allows user to select multiple genres at once\n",
-    "                    multi=True,  \n",
-    "                # Styling to fit half the width\n",
-    "                ), style={'margin-bottom': '20px'}\n",
-    "            ),\n",
-    "            html.Div(\n",
-    "                # Year range slider\n",
-    "                dcc.RangeSlider(\n",
-    "                    # Identifier for the year range slider component\n",
-    "                    id='year-slider',\n",
-    "                    # Lower bound as determined from our sorted year array \n",
-    "                    min=years[0],\n",
-    "                    # Upper bound as determined from our sorted year array \n",
-    "                    max=years[-1],\n",
-    "                    # Default to having full range selected\n",
-    "                    value=[years[0], years[-1]],\n",
-    "                    # Put a mark every 10 years for readability\n",
-    "                    marks={str(year): str(year) for year in years[::16]},\n",
-    "                # Styling to fit half the width\n",
-    "                ), style={'margin-bottom': '20px'}\n",
-    "            ),     \n",
-    "        ], className = 'three columns'),\n",
+    "            html.Div(children=[\n",
+    "                html.H3('Filter Options', className='custom-font', style={}), \n",
+    "                html.Div(\n",
+    "                    # Control dropdown to select which dropdown to activate\n",
+    "                    dcc.RadioItems(\n",
+    "                    id='control-radio',\n",
+    "                    options=[\n",
+    "                        {'label': 'Select Movie', 'value': 'movie'},\n",
+    "                        {'label': 'Select Genre', 'value': 'genre'}\n",
+    "                    ],\n",
+    "                    value='movie',\n",
+    "                    style={'width': '100%', 'display': 'flex', 'justifyContent': 'center'}\n",
+    "                    ), className='custom-font', style={'margin-bottom': '20px'}\n",
+    "                ),\n",
+    "                html.Div(\n",
+    "                    # Movie dropdown component\n",
+    "                    dcc.Dropdown(\n",
+    "                        # Identifier for the movie dropdown component\n",
+    "                        id='movie-dropdown',  \n",
+    "                        #Using the dataframe to populate the options by creating key value pairs with unique movie titles\n",
+    "                        options=[{'label': title, 'value': title} for title in df['Series_Title'].unique()],  \n",
+    "                        #Custom placeholder text to describe what actions to take as a user\n",
+    "                        placeholder = 'Select One Movie Title',\n",
+    "                    # Styling to fit half the width\n",
+    "                    ), className='custom-font', style={'margin-bottom': '20px', 'textAlign': 'center', 'color': '#888'}\n",
+    "                ),\n",
+    "                html.Div(\n",
+    "                    # Genre dropdown component\n",
+    "                    dcc.Dropdown(\n",
+    "                        # Identifier for the genre dropdown component\n",
+    "                        id='genre-dropdown',  \n",
+    "                        #Using the dataframe to populate the options by creating key value pairs with unique genres\n",
+    "                        options=[{'label': genre, 'value': genre} for genre in genre_columns.unique()],  \n",
+    "                        #Custom placeholder text to describe what actions to take as a user\n",
+    "                        placeholder = 'Select One or More Genre',\n",
+    "                        # Allows user to select multiple genres at once\n",
+    "                        multi=True,  \n",
+    "                    # Styling to fit half the width\n",
+    "                    ), style={'margin-bottom': '20px', 'textAlign': 'center', 'color': '#888'}\n",
+    "                ),\n",
+    "                html.Div(\n",
+    "                    # Year range slider\n",
+    "                    dcc.RangeSlider(\n",
+    "                        # Identifier for the year range slider component\n",
+    "                        id='year-slider',\n",
+    "                        # Lower bound as determined from our sorted year array \n",
+    "                        min=years[0],\n",
+    "                        # Upper bound as determined from our sorted year array \n",
+    "                        max=years[-1],\n",
+    "                        # Default to having full range selected\n",
+    "                        value=[years[0], years[-1]],\n",
+    "                        # Put a mark every 10 years for readability\n",
+    "                        marks={str(year): str(year) for year in years[::16]},\n",
+    "                    # Styling to fit half the width\n",
+    "                    ), style={'margin-bottom': '20px'}\n",
+    "                ),     \n",
+    "            ], style = {'border-radius': '10px', 'padding': '10px', 'background-color' : 'white', 'margin-left': '15px', 'box-shadow': '0 4px 8px 0 rgba(0, 0, 0, 0.2)'}),\n",
+    "            html.Div(children=[\n",
+    "                html.H3('About the Dashboard', style={}), \n",
+    "                html.Ul(children=[\n",
+    "                    html.Li(\"Pie chart represents the total distribution of IMDb ratings of individual films within the filtered options\"),\n",
+    "                    html.Li(\"Bubble graph shows how gross revenue is related to IMDb rating\"),\n",
+    "                    html.Li(\"The size of each individual bubble is determined by the number of users who voted on that particular film\"),\n",
+    "                    html.Li(\"The position of the red bubbles are determined by the average gross revenue for films for a given rating\"),\n",
+    "                    html.Li(\"Selecting a movie will display a blue bubble on the bubble graph\"),\n",
+    "                    html.Li(\"Filtering by genre and/or year will filter the bubble graph to only account for movies for the specifications\"),\n",
+    "                    html.Li(\"Stacked area chart represents how popular a genre is for any given time period\"),\n",
+    "                    html.Li(\"Selecting a movie will display only that movies genres on the stacked area chart\"),\n",
+    "                    html.Li(\"Filtering by genre will display those genres on the stacked area chart\"),\n",
+    "                    html.Li(\"Filtering by year will display only the selected time frame on the stacked area chart\"),\n",
+    "                ], className='custom-font'),\n",
+    "            ], className='custom-font', style = {'border-radius': '10px', 'padding': '10px', 'background-color' : 'white', 'margin-left': '15px', 'box-shadow': '0 4px 8px 0 rgba(0, 0, 0, 0.2)', 'margin-top': '20px', 'padding': '15px'}),\n",
+    "        ], className = 'three columns', ),\n",
     "        html.Div(children=[\n",
     "            html.Div([\n",
     "                html.Div([\n",
     "                    dcc.Graph(id='ratings-pie-chart')\n",
-    "                ], className='four columns'),\n",
+    "                ], className='four columns', style = {'border-radius': '10px', 'padding': '10px', 'background-color' : 'white', 'box-shadow': '0 4px 8px 0 rgba(0, 0, 0, 0.2)'}),\n",
     "\n",
     "                # Second graph (Bubble Chart) taking up 5 columns\n",
     "                html.Div([\n",
     "                    dcc.Graph(id='bubble-chart')\n",
-    "                ], className='eight columns')\n",
+    "                ], className='eight columns',  style = {'border-radius': '10px', 'padding': '10px', 'background-color' : 'white', 'box-shadow': '0 4px 8px 0 rgba(0, 0, 0, 0.2)'})\n",
     "            ], className='row', style={'display': 'flex', 'margin-bottom': '20px'}),\n",
     "\n",
     "            # Bottom Row Graph\n",
     "            html.Div([\n",
     "                dcc.Graph(id='line-graph')\n",
-    "            ], className='row')\n",
-    "        ], className='nine columns', style={'margin-left': '0px','margin-right': '0px'}),  # Additional padding if needed\n",
+    "            ], className='row', style = {'border-radius': '10px', 'padding': '10px', 'background-color' : 'white', 'box-shadow': '0 4px 8px 0 rgba(0, 0, 0, 0.2)'})\n",
+    "        ], className='nine columns', style={'margin-left': '49px','margin-right': '0px'}),  # Additional padding if needed\n",
     "    \n",
     "    #Styling for the container div that has all components stored in column direction and centers them\n",
-    "    ], ),  \n",
+    "    ]),  \n",
+    "    # Add the footer\n",
+    "    html.Footer([\n",
+    "        html.P(\"Created by Henry Chen\"),\n",
+    "        html.Div([\n",
+    "            html.A(\n",
+    "                [\n",
+    "                    DashIconify(\n",
+    "                        icon=\"devicon:kaggle\",\n",
+    "                        width=20,\n",
+    "                        height=20,\n",
+    "                    ),\n",
+    "                ],\n",
+    "                target=\"_blank\",\n",
+    "                href=\"https://www.kaggle.com/datasets/harshitshankhdhar/imdb-dataset-of-top-1000-movies-and-tv-shows\",\n",
+    "            ),\n",
+    "            html.A(\n",
+    "                [\n",
+    "                    DashIconify(\n",
+    "                        icon=\"ion:logo-github\",\n",
+    "                        width=20,\n",
+    "                        height=20,\n",
+    "                    ),\n",
+    "                ],\n",
+    "                href=\"https://github.com/henqc/plotly-dash\",\n",
+    "                target=\"_blank\",\n",
+    "                className=\"github\",\n",
+    "            ),\n",
+    "        ],\n",
+    "        className=\"flex\", style = {'margin-left': '10px'}\n",
+    "    ),\n",
+    "    ], className='twelve columns custom-font', style={'justify-content': 'center', 'padding': '10px', 'background-color': '#f8f9fa', 'border-top': '1px solid #e9ecef', 'width': '100%', 'margin-top': '20px', 'display': 'flex', 'flex-direction': 'row'}),\n",
     "])\n",
     "\n",
     "#Run the app\n",
@@ -447,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
