finished updating app.py

--- a/movie-dash.ipynb
+++ b/movie-dash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1122,
+   "execution_count": 1128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1123,
+   "execution_count": 1129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1124,
+   "execution_count": 1130,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1125,
+   "execution_count": 1131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1126,
+   "execution_count": 1132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,6 +142,8 @@
     "     Input('year-slider', 'value'),\n",
     "     Input('movie-dropdown', 'value')]\n",
     ")\n",
+    "\n",
+    "# Handle the callback to update the stacked area graph\n",
     "def update_graph(selected_genres, selected_years, selected_movies):\n",
     "    # Handle selected years range\n",
     "    if not selected_years:\n",
@@ -150,7 +152,7 @@
     "    # Filter the dataframe for the selected years\n",
     "    filtered_df = df[df['Released_Year'].between(selected_years[0], selected_years[1])]\n",
     "\n",
-    "    # If movies are selected, ensure their genres are considered\n",
+    "    # Movie selection logic\n",
     "    if selected_movies:\n",
     "        movie_genres = df[df['Series_Title'] == (selected_movies)][genre_columns].columns[\n",
     "            (df[df['Series_Title'] == (selected_movies)][genre_columns] == 1).any()\n",
@@ -158,7 +160,6 @@
     "        if not selected_genres:\n",
     "            selected_genres = movie_genres\n",
     "        else:\n",
-    "        # Union of selected genres and movie genres\n",
     "            selected_genres = list(set(selected_genres) | set(movie_genres))\n",
     "    \n",
     "    # Default to all genres if none are selected\n",
@@ -169,8 +170,7 @@
     "    if selected_genres:\n",
     "        filtered_df = filtered_df[filtered_df[selected_genres].sum(axis=1) > 0]\n",
     "\n",
-    "        # Further processing like grouping by 'Year_Bin' etc.\n",
-    "        # Example:\n",
+    "        # Group years into bins\n",
     "        def year_to_bin(year):\n",
     "            base_year = min(years)\n",
     "            return f\"{int(floor((year - base_year) / 3) * 3 + base_year)}-{int(floor((year - base_year) / 3) * 3 + base_year + 2)}\"\n",
@@ -181,6 +181,7 @@
     "        genre_popularity = genre_popularity.reset_index()\n",
     "        df_plottable = pd.melt(genre_popularity, id_vars=['Year_Bin'], var_name='Genre', value_name='Popularity')\n",
     "\n",
+    "        # Plot\n",
     "        fig = px.area(df_plottable,\n",
     "                      x='Year_Bin',\n",
     "                      y='Popularity',\n",
@@ -189,11 +190,11 @@
     "                      line_group='Genre',\n",
     "                      title='Genre Popularity Over Three-Year Bins',\n",
     "                      labels={'Popularity': 'Number of Movies', 'Year_Bin': 'Year Bin'})\n",
-    "                # Add a horizontal line for the selected movie's release year bin\n",
+    "        \n",
+    "        # Add vertical line for selected movie release year\n",
     "        if selected_movies:\n",
-    "            movie_release_year = df[df['Series_Title'] == (selected_movies)]['Released_Year'].iloc[0]  # Assuming first selected movie\n",
+    "            movie_release_year = df[df['Series_Title'] == (selected_movies)]['Released_Year'].iloc[0] \n",
     "            movie_year_bin = year_to_bin(movie_release_year)\n",
-    "            # Find the maximum 'Popularity' for the bin to set the line height\n",
     "            max_popularity = df_plottable[df_plottable['Year_Bin'] == movie_year_bin]['Popularity'].max()\n",
     "            fig.add_trace(go.Scatter(\n",
     "                x=[movie_year_bin, movie_year_bin],\n",
@@ -203,7 +204,6 @@
     "                name='Release Year Bin'\n",
     "            ))\n",
     "    else:\n",
-    "        # Return an empty plot if no genres are selected\n",
     "        fig = px.area(title='No data to display - select genres and/or movies')\n",
     "    \n",
     "    return fig\n",
@@ -214,6 +214,8 @@
     "     Input('year-slider', 'value'),\n",
     "     Input('movie-dropdown', 'value')]\n",
     ")\n",
+    "\n",
+    "# Handle the callback to update the bubble graph\n",
     "def update_bubble_chart(selected_genres, selected_years, selected_movie):\n",
     "    # Filter dataframe based on selected years\n",
     "    filtered_df = df[df['Released_Year'].between(selected_years[0], selected_years[1])]\n",
@@ -222,22 +224,22 @@
     "    if selected_genres:\n",
     "        filtered_df = filtered_df[filtered_df[selected_genres].sum(axis=1) > 0]\n",
     "    \n",
-    "    # Aggregate general data\n",
+    "    # Aggregate data\n",
     "    grouped_df = filtered_df.groupby('IMDB_Rating').agg({\n",
     "        'Gross': 'mean',\n",
     "        'No_of_Votes': 'mean',\n",
     "        'Series_Title': 'count'\n",
     "    }).reset_index().rename(columns={'Series_Title': 'Count_of_Movies'})\n",
     "\n",
-    "    # Assign a default label and color for color\n",
-    "    grouped_df['label'] = 'Average'  # Label for all average data points\n",
+    "    # Average will be red, selected movie will be blue\n",
+    "    grouped_df['label'] = 'Average'  \n",
     "    grouped_df['color'] = 'red'\n",
     "\n",
     "    if selected_movie:\n",
     "        movie_data = df[df['Series_Title'] == selected_movie]\n",
     "        movie_specific = movie_data[['IMDB_Rating', 'Gross', 'No_of_Votes', 'Series_Title']]\n",
     "        movie_specific = movie_specific.rename(columns={'Series_Title': 'label'})\n",
-    "        movie_specific['color'] = 'blue'  # Specific color for selected movie\n",
+    "        movie_specific['color'] = 'blue'  \n",
     "\n",
     "        # Concatenate to general grouped DataFrame\n",
     "        combined_df = pd.concat([grouped_df, movie_specific])\n",
@@ -246,14 +248,14 @@
     "\n",
     "    color_map = {'Average': '#cb818f', selected_movie: '#92c5de'} if selected_movie else {'Average': '#cb818f'}\n",
     "\n",
-    "    # Create the bubble chart\n",
+    "    # Plot\n",
     "    fig = px.scatter(\n",
     "        combined_df,\n",
     "        x='IMDB_Rating',\n",
     "        y='Gross',\n",
     "        size='No_of_Votes',\n",
-    "        color='label',  # Use 'label' for coloring to tie it to movie titles or 'Average'\n",
-    "        hover_name='label',  # Hover shows the label which is either 'Average' or the movie title\n",
+    "        color='label',  \n",
+    "        hover_name='label',  \n",
     "        title='Average Gross Revenue vs. IMDB Rating',\n",
     "        color_discrete_map=color_map,\n",
     "        labels={\n",
@@ -261,7 +263,7 @@
     "            'Gross': 'Average Gross Revenue ($)',\n",
     "            'No_of_Votes': 'Average Number of Votes',\n",
     "            'Count_of_Movies': 'Movies Count',\n",
-    "            'label': 'Category'  # Labeling the color category in legend and hover\n",
+    "            'label': 'Category'  \n",
     "        },\n",
     "        size_max=60,\n",
     "        opacity=0.6\n",
@@ -269,18 +271,20 @@
     "    \n",
     "    return fig\n",
     "\n",
-    "# Callback to update the pie chart\n",
+    "\n",
     "@app.callback(\n",
     "    Output('ratings-pie-chart', 'figure'),\n",
     "    [Input('genre-dropdown', 'value'),\n",
     "     Input('year-slider', 'value'),\n",
     "     Input('movie-dropdown', 'value')]\n",
     ")\n",
+    "\n",
+    "# Handle the callback to update the ratings pie chart\n",
     "def update_ratings_chart(selected_genres, selected_years, selected_movie):\n",
     "    if selected_movie:\n",
     "        # Filter to the selected movie\n",
     "        filtered_df = df[df['Series_Title'] == selected_movie]\n",
-    "        # Create a DataFrame that represents just this movie's rating as a full pie chart\n",
+    "        # If a single movie is selected, display a full pie\n",
     "        single_movie_df = pd.DataFrame({\n",
     "            'Rating': [f\"{filtered_df['IMDB_Rating'].iloc[0]} Rating\"],\n",
     "            'Count': [1]\n",
@@ -293,11 +297,11 @@
     "            filtered_df = filtered_df[filtered_df[selected_genres].sum(axis=1) > 0]\n",
     "        \n",
     "        # Define rating bins\n",
-    "        bins = [0, 7.75, 8, 8.25, 8.5, 8.75, 9, 9.25, 9.5]  # Note: Adjusted to include practical ranges\n",
+    "        bins = [0, 7.75, 8, 8.25, 8.5, 8.75, 9, 9.25, 9.5] \n",
     "        labels = ['<7.75', '7.75-8', '8-8.25', '8.25-8.5', '8.5-8.75', '8.75-9', '9-9.25', '>9.25']\n",
     "        filtered_df['Rating_Bin'] = pd.cut(filtered_df['IMDB_Rating'], bins=bins, labels=labels, right=False)\n",
     "        \n",
-    "        # Generate pie chart\n",
+    "        # Plot\n",
     "        fig = px.pie(\n",
     "            filtered_df,\n",
     "            names='Rating_Bin',\n",
@@ -313,19 +317,21 @@
     "    [Output('movie-dropdown', 'style'), Output('genre-dropdown', 'style'), Output('movie-dropdown', 'value'), Output('genre-dropdown', 'value')],\n",
     "    [Input('control-radio', 'value')]\n",
     ")\n",
+    "\n",
+    "# Handle the callback to toggle and clear dropdowns\n",
     "def toggle_and_clear_dropdowns(selected_option):\n",
     "    if selected_option == 'movie':\n",
-    "        return {'display': 'block'}, {'display': 'none'}, None, None  # Clear genre dropdown value\n",
+    "        return {'display': 'block'}, {'display': 'none'}, None, None  \n",
     "    elif selected_option == 'genre':\n",
-    "        return {'display': 'none'}, {'display': 'block'}, None, None  # Clear movie dropdown value\n",
-    "    return {'display': 'none'}, {'display': 'none'}, None, None  # Shouldn't occur, but just in case\n",
+    "        return {'display': 'none'}, {'display': 'block'}, None, None  \n",
+    "    return {'display': 'none'}, {'display': 'none'}, None, None  \n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1127,
+   "execution_count": 1133,
    "metadata": {},
    "outputs": [
     {
@@ -411,6 +417,7 @@
     "                    ), style={'margin-bottom': '20px'}\n",
     "                ),     \n",
     "            ], style = {'border-radius': '10px', 'padding': '10px', 'background-color' : 'white', 'margin-left': '15px', 'box-shadow': '0 4px 8px 0 rgba(0, 0, 0, 0.2)'}),\n",
+    "            # About the dashboard section\n",
     "            html.Div(children=[\n",
     "                html.H3('About the Dashboard', style={}), \n",
     "                html.Ul(children=[\n",
@@ -427,27 +434,24 @@
     "                ], className='custom-font'),\n",
     "            ], className='custom-font', style = {'border-radius': '10px', 'padding': '10px', 'background-color' : 'white', 'margin-left': '15px', 'box-shadow': '0 4px 8px 0 rgba(0, 0, 0, 0.2)', 'margin-top': '20px', 'padding': '15px'}),\n",
     "        ], className = 'three columns', ),\n",
+    "        # Graphs section\n",
     "        html.Div(children=[\n",
     "            html.Div([\n",
     "                html.Div([\n",
     "                    dcc.Graph(id='ratings-pie-chart')\n",
     "                ], className='four columns', style = {'border-radius': '10px', 'padding': '10px', 'background-color' : 'white', 'box-shadow': '0 4px 8px 0 rgba(0, 0, 0, 0.2)'}),\n",
     "\n",
-    "                # Second graph (Bubble Chart) taking up 5 columns\n",
     "                html.Div([\n",
     "                    dcc.Graph(id='bubble-chart')\n",
     "                ], className='eight columns',  style = {'border-radius': '10px', 'padding': '10px', 'background-color' : 'white', 'box-shadow': '0 4px 8px 0 rgba(0, 0, 0, 0.2)'})\n",
     "            ], className='row', style={'display': 'flex', 'margin-bottom': '20px'}),\n",
     "\n",
-    "            # Bottom Row Graph\n",
     "            html.Div([\n",
     "                dcc.Graph(id='line-graph')\n",
     "            ], className='row', style = {'border-radius': '10px', 'padding': '10px', 'background-color' : 'white', 'box-shadow': '0 4px 8px 0 rgba(0, 0, 0, 0.2)'})\n",
-    "        ], className='nine columns', style={'margin-left': '49px','margin-right': '0px'}),  # Additional padding if needed\n",
-    "    \n",
-    "    #Styling for the container div that has all components stored in column direction and centers them\n",
+    "        ], className='nine columns', style={'margin-left': '49px','margin-right': '0px'}),  \n",
     "    ]),  \n",
-    "    # Add the footer\n",
+    "    # Footer\n",
     "    html.Footer([\n",
     "        html.P(\"Created by Henry Chen\"),\n",
     "        html.Div([\n",
